# dash-shared-core

./: Cargo.lock.orig  Cargo.toml
.github/workflows/: reachability.yml
dash-spv-android-bindings/: Cargo.toml  README.md  build.rs
dash-spv-android-bindings/examples/: GetStatusResponse.java  RustRunner.java  example.java  jni.cpp
dash-spv-android-bindings/src/: bindings.rs  core.rs  lib.rs
dash-spv-android-bindings/src/ffi/: get_status_response.rs  mod.rs  opaque_runtime.rs  unboxer.rs
dash-spv-example-app/: Cargo.toml  dashsync-app.entitlements  macos_runner.sh
dash-spv-example-app/src/: main.rs
dash-spv-ffi/: Cargo.toml
dash-spv-ffi/src/: lib.rs  macros.rs
dash-spv-ffi/src/bindings/: address.rs  chain.rs  common.rs  keys.rs  masternode.rs  tx.rs
dash-spv-ffi/src/ffi/: callbacks.rs  common.rs  from.rs  to.rs
dash-spv-ffi/src/types/: llmq_snapshot.rs  llmq_validation_data.rs  mn_list_diff_result.rs  opaque_key.rs  qr_info_result.rs  transaction.rs  transaction_input.rs  transaction_output.rs
dash-spv-macro-derive/: Cargo.toml
dash-spv-macro-derive/src/: interface.rs  lib.rs
dash-spv-masternode-processor/: Cargo.toml  Cargo.toml.orig
dash-spv-masternode-processor/resources/peers/: devnet-screwdriver.plist
dash-spv-masternode-processor/src/: chains_manager.rs  lib.rs  lib_tests.rs  macros.rs
dash-spv-masternode-processor/src/bindings/: common.rs  keys.rs  masternode.rs
dash-spv-masternode-processor/src/chain/: chain.rs
dash-spv-masternode-processor/src/chain/common/: chain_type.rs  llmq_type.rs  llmq_type.rs.orig
dash-spv-masternode-processor/src/chain/network/: peer.rs
dash-spv-masternode-processor/src/chain/tx/: coinbase_transaction.rs  transaction.rs  transaction_input.rs  transaction_output.rs  transaction_persistence_status.rs
dash-spv-masternode-processor/src/common/: block.rs  llmq_version.rs  masternode_type.rs  socket_address.rs
dash-spv-masternode-processor/src/consensus/: encode.rs
dash-spv-masternode-processor/src/crypto/: byte_util.rs
dash-spv-masternode-processor/src/ffi/: callbacks.rs  common.rs  from.rs  to.rs  unboxer.rs
dash-spv-masternode-processor/src/keys/: bls_key.rs  dip14.rs  key.rs  mod.rs
dash-spv-masternode-processor/src/manager/: peer_manager.rs
dash-spv-masternode-processor/src/models/: llmq_entry.rs  llmq_entry.rs.orig  masternode_entry.rs  masternode_list.rs  mn_list_diff.rs  operator_public_key.rs
dash-spv-masternode-processor/src/network/: mod.rs
dash-spv-masternode-processor/src/network/p2p/: buffer.rs  control_dispatcher.rs  control_notification.rs  expected_reply.rs  layer.rs  mod.rs  notification.rs  peer.rs  (+6 more)
dash-spv-masternode-processor/src/processing/: mn_listdiff_result.rs  processor.rs
dash-spv-masternode-processor/src/tests/: json_from_core_snapshot.rs  test_testnet_checkpoints.rs
dash-spv-masternode-processor/src/types/: coinbase_transaction.rs  llmq_entry.rs  llmq_snapshot.rs  masternode_entry.rs  masternode_list.rs  mn_list_diff.rs  mn_list_diff_result.rs  mod.rs  opaque_key.rs  operator_public_key.rs  qr_info_result.rs  transaction.rs  transaction_input.rs  transaction_output.rs
dash-spv-masternode-processor/src/util/: file.rs  file.rs.orig  java.rs  java.rs.orig  logging.rs  mod.rs  mod.rs.orig
dash-spv-platform/: Cargo.toml
dash-spv-platform/src/: lib.rs
reachability/src/: lib.rs
(+15 files in other folders)
