[package]
name = "dash-spv-android-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.139"
#rs-dapi-client = { git = "https://github.com/pankcuf/rs-dapi-client", rev = "afdde15" }
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_android_bindings"
crate-type = ["staticlib", "cdylib"]

