[package]
name = "dash-spv-example-app"
version = "0.1.0"
description = "Example app for Dash SPV"
edition = "2021"

[dependencies]
dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
#tokio = { version = "1.25.0", features = ["full"] }
bip0039 = "0.11.0"
mio = "0.8.6"
futures = { version = "0.3.25", features = ["thread-pool"] }
futures-timer = "3.0.2"
tokio = "1.28.0"
