[package]
name = "dash-spv-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-spv-ffi = { path = "../dash-spv-ffi" }
libc = "0.2.139"
rs-dapi-client = { git = "https://github.com/pankcuf/rs-dapi-client" }
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.2"

[lib]
name = "dash_spv_platform"
